--- a/css/customize.css
+++ b/css/customize.css
@@ -130,6 +130,12 @@ body {
   color: #fff !important;
 }
 
+#course_info h2,
+#student_info h3 {
+  margin-top: 8px;
+  margin-bottom: 8px;
+}
+
 
 
 
