--- a/css/customize.css
+++ b/css/customize.css
@@ -287,6 +287,7 @@ body {
   gap: 36px;
   margin-top: 110px;
   margin-bottom: 80px;
+  width: 100%;
 }
 
 .glass-box {
@@ -298,6 +299,7 @@ body {
   border: 1.5px solid rgba(255,255,255,0.16);
   width: 85vw;
   max-width: 950px;
+  margin: 0 auto;
   padding: 38px 38px 34px 38px;
   color: #fff;
   text-align: center;
