--- a/css/customize.css
+++ b/css/customize.css
@@ -492,8 +492,10 @@ body {
   color: #fff;
   padding: 10px 22px;
   text-decoration: none;
-  display: block;
-  text-align: left;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
   font-family: 'Raleway', Arial, sans-serif;
   font-size: 1em;
   border-radius: 6px;
