--- a/css/customize.css
+++ b/css/customize.css
@@ -612,7 +612,7 @@ body {
 }
 .cover-title {
   font-size: 2.7em;
-  text-align: left;
+  text-align: center;
   margin-bottom: 14px;
   font-family: 'Raleway', Arial, sans-serif;
   letter-spacing: 2px;
